--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --title-decor: #000028;
+  --accent-color: #FF0070;
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --is-light: visible;
+  --element-color: var(--accent-color);
+  --border-color: 255, 0, 112;
 }
