--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,27 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --text-color: rgb(53, 52, 48);
+  --title-color: #FFC2E6;
+  --title-decor: #353430;
+  --accent-color: #FF8DCB;
+  --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #FFF1F7;
+  --is-light: hidden;
+  --element-color: var(--text-color);
+  --border-color: 53, 52, 48;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-decor: #353430;
+  --accent-color: #FF8DCB;
+  --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #FFF1F7;
+  --is-light: hidden;
+  --element-color: var(--text-color);
+  --border-color: 53, 52, 48;
+}
+} 
