--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,13 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --title-decor: #000028;
+  --accent-color: rgb(255, 0, 112);
+  --font-family: 'IBM Plex mono';
+  --font-size: 18px;
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --is-light: visible;
+  --element-color: var(--accent-color);
+  --border-color: 255, 0, 112;
+}
