--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+body {
+  margin: 0;
+  padding: 0;
+}
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
@@ -283,6 +287,7 @@
   .topic-gallery {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    margin-block-end: 60px;
   }
 
   .images-title {
@@ -319,10 +324,6 @@
   .street-image {
     grid-column: 2/4;
     grid-row: 4;
-  }
-
-  .topic-gallery {
-    margin-block-end: 60px;
   }
 
   .footer {
