--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@
   display: grid;
   position: relative;
   grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
   align-content: start;
   margin-block-end: 40px;
   padding: 10px 0;
@@ -137,7 +138,6 @@
 .header-text {
   grid-row: 3;
   grid-column: 1;
-  margin-block-end: 56px;
 }
 
 .subtitle-decor {
@@ -146,10 +146,15 @@
   font-weight: bold;
   font-size: var(--font-size);
   line-height: 23.4px;
+  block-size: min-content;
 }
 
 .main {
   margin-inline: 10px;
+}
+
+.topic {
+  display: grid;
 }
 
 .topic:not(:last-child) {
@@ -172,6 +177,10 @@
   color: var(--text-color);
   font-size: var(--font-size);
   line-height: 23.4px;
+}
+
+.card-text:not(:last-child) {
+  margin-block-end: 10px;
 }
 
 .text-link {
@@ -197,6 +206,7 @@
 
 .topic-gallery {
   margin-block-end: 40px;
+  gap: 10px;
 }
 
 .topic-subtitle {
@@ -262,7 +272,6 @@
   }
 
   .topic {
-    display: grid;
     grid-template-columns: 1fr 2fr;
     column-gap: 20px;
   }
@@ -277,6 +286,11 @@
 
   .topic-card {
     grid-column: 2;
+  }
+
+  .accent-section {
+    grid-row: 2;
+    grid-column: 1/-1;
   }
 
   .accent-topic .topic-card {
@@ -355,19 +369,13 @@
     margin-block-end: 114px;
   }
 
-  .accent-topic {
+  .accent-section {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
   }
 
-  .accent-topic .topic-card:nth-child(2) {
-    grid-column: 1;
-  }
-
-  .accent-topic .topic-card:nth-child(3) {
-    grid-column: 2;
-  }
-
-  .accent-topic .topic-card:nth-child(4) {
-    grid-column: 3;
+  .accent-section .topic-card {
+    grid-column: span 1;
   }
 }
